fix : Add variation to clickable cards to have text top or text bottom with flexible image alignment

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -473,6 +473,12 @@
         }
     }
 
+    &.vertical {
+        ul {
+            flex-direction: column;
+        }
+    }
+
     ul {
         display: flex;
         justify-content: center;
@@ -488,6 +494,16 @@
             background-color: white;
             width: unset;
             min-height: unset;
+
+            .image-text {
+                background-color: white;
+                color: black;
+                margin: 0;
+
+                p {
+                    margin: unset;
+                }
+            }
         }
     }
 }
